--- a/stata_2025/jwdid_stata.html
+++ b/stata_2025/jwdid_stata.html
@@ -1344,7 +1344,7 @@ Note: <code>jwdid</code> does not impose this restriction.</div>
 <ol type="1">
 <li>Avoid the problem using only pre-treatment data for estimation of counterfactuals <span class="citation" data-cites="borusyak2024 gardner2022">(<a href="#/references" role="doc-biblioref" onclick>Borusyak, Jaravel, and Spiess 2024</a>; <a href="#/references" role="doc-biblioref" onclick>Gardner 2022</a>)</span> (<code>did2s</code> and <code>did_imputation</code>)</li>
 <li>Use only good controls when estimating the ATT <span class="citation" data-cites="callaway2021">(<a href="#/references" role="doc-biblioref" onclick>Callaway and Sant’Anna 2021</a>)</span> (<code>csdid[2]</code>)</li>
-<li>Modify model specification to achieve 1 or 2. <a href="%60jwdid%60">@wooldridge2023</a><a href="%60jwdid%60">; @wooldridge2021; @deb2024; @yotov2024</a></li>
+<li>Modify model specification to achieve 1 or 2. <a href="%60jwdid%60">@wooldridge2023; @wooldridge2021; @deb2024; @yotov2024</a></li>
 </ol></li>
 </ul>
 </section>
