--- a/stata_2025/jwdid_stata.html
+++ b/stata_2025/jwdid_stata.html
@@ -1717,7 +1717,7 @@ Wooldridge, Jeffrey M. 2021. <span>“Two-Way Fixed Effects, the Two-Way Mundlak
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
 <div class="footer footer-default">
-<p><em>Rios-Avila</em></p>
+<p><em>Oceania Stata Conference 2025</em></p>
 </div>
 </div></div>
 
