--- a/stata_2025/jwdid_stata.html
+++ b/stata_2025/jwdid_stata.html
@@ -1344,7 +1344,7 @@ Note: <code>jwdid</code> does not impose this restriction.</div>
 <ol type="1">
 <li>Avoid the problem using only pre-treatment data for estimation of counterfactuals <span class="citation" data-cites="borusyak2024 gardner2022">(<a href="#/references" role="doc-biblioref" onclick>Borusyak, Jaravel, and Spiess 2024</a>; <a href="#/references" role="doc-biblioref" onclick>Gardner 2022</a>)</span> (<code>did2s</code> and <code>did_imputation</code>)</li>
 <li>Use only good controls when estimating the ATT <span class="citation" data-cites="callaway2021">(<a href="#/references" role="doc-biblioref" onclick>Callaway and Sant’Anna 2021</a>)</span> (<code>csdid[2]</code>)</li>
-<li>Modify model specification to achieve 1 or 2. <a href="%60jwdid%60">@wooldridge2023; @wooldridge2021; @deb2024; @yotov2024</a></li>
+<li>Modify model specification to achieve 1 or 2. <span class="citation" data-cites="wooldridge2023 wooldridge2021 deb2024 yotov2024">(<a href="#/references" role="doc-biblioref" onclick>Jeffrey M. Wooldridge 2023</a>; <a href="#/references" role="doc-biblioref" onclick>Jeffrey M. Wooldridge 2021</a>; <a href="#/references" role="doc-biblioref" onclick>Deb et al. 2024</a>; <a href="#/references" role="doc-biblioref" onclick>Yotov, Nagengast, and Rios-Avila 2024</a>)</span> (<code>jwdid</code>)</li>
 </ol></li>
 </ul>
 </section>
@@ -1700,6 +1700,9 @@ Borusyak, Kirill, Xavier Jaravel, and Jann Spiess. 2024. <span>“Revisiting Eve
 <div id="ref-callaway2021" class="csl-entry" role="listitem">
 Callaway, Brantly, and Pedro H. C. Sant’Anna. 2021. <span>“Difference-in-Differences with Multiple Time Periods.”</span> <em>Journal of Econometrics</em> 225 (2): 200–230. <a href="https://doi.org/10.1016/j.jeconom.2020.12.001">https://doi.org/10.1016/j.jeconom.2020.12.001</a>.
 </div>
+<div id="ref-deb2024" class="csl-entry" role="listitem">
+Deb, Partha, Edward Norton, Jeffrey Wooldridge, and Jeffrey Zabel. 2024. <span>“A Flexible, Heterogeneous Treatment Effects Difference-in-Differences Estimator for Repeated Cross-Sections.”</span> <a href="https://doi.org/10.3386/w33026">https://doi.org/10.3386/w33026</a>.
+</div>
 <div id="ref-gardner2022" class="csl-entry" role="listitem">
 Gardner, John. 2022. <span>“Two-Stage Differences in Differences.”</span> <a href="https://doi.org/10.48550/ARXIV.2207.05943">https://doi.org/10.48550/ARXIV.2207.05943</a>.
 </div>
@@ -1711,6 +1714,9 @@ Wooldridge, Jeffrey M. 2023. <span>“Simple Approaches to Nonlinear Difference-
 </div>
 <div id="ref-wooldridge2021" class="csl-entry" role="listitem">
 Wooldridge, Jeffrey M. 2021. <span>“Two-Way Fixed Effects, the Two-Way Mundlak Regression, and Difference-in-Differences Estimators.”</span> <em>SSRN Electronic Journal</em>. <a href="https://doi.org/10.2139/ssrn.3906345">https://doi.org/10.2139/ssrn.3906345</a>.
+</div>
+<div id="ref-yotov2024" class="csl-entry" role="listitem">
+Yotov, Yoto, Arne Nagengast, and Fernando Rios-Avila. 2024. <span>“The European Single Market and Intra-Eu Trade: An Assessment with Heterogeneity-Robust Difference-in-Differences Methods.”</span> <a href="http://dx.doi.org/10.2139/ssrn.4848975">http://dx.doi.org/10.2139/ssrn.4848975</a>.
 </div>
 </div>
 </section></section>
